--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -118,7 +118,7 @@ jobs:
     timeout-minutes: 35
     strategy:
       matrix:
-        test: [portable_smoke, portable_project]
+        test: [portable_smoke, portable_project, portable_project_dir]
       fail-fast: false
     steps:
       - uses: actions/checkout@master
@@ -147,7 +147,7 @@ jobs:
     timeout-minutes: 45
     strategy:
       matrix:
-        test: [portable_smoke, portable_project]
+        test: [portable_smoke, portable_project, portable_project_dir]
       fail-fast: false
     env:
       _EDGEDB_WSL_DISTRO: Debian
